# CUDA-Common-Operator-Implementations

./: CMakeLists.txt  LICENSE  README.md
include/layer/: relu.hpp  sigmod.hpp  silu.hpp
source/layer/: relu.cu  sidmod.cu  silu.cu
test/: CMakeLists.txt  test_main.cpp  test_relu.cpp  test_sigmod.cpp  test_silu.cpp
